Accidentally reversed ul and li tags in sidenav, fixed it and added styles to fix spacing and remove list style.

--- a/styles.css
+++ b/styles.css
@@ -51,19 +51,32 @@ body {
     background-clip: text;
     font-size: 1.5rem;
     position: sticky;
+    align-self: flex-start;
     top: 0px;
-    list-style-type: none;
     width: 100%;
     padding-left: 1rem;
     height: 100vh;
-    align-self: flex-start;
+}
+
+.sidenav li {
+    list-style-type: none;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+}
+
+.sidenav ul {
+    margin-block-start: 0.5em;
+}
+
+.sidenav p {
+    margin-block-end: 0.5em;
 }
 
 /*.tab {
     text-shadow: 0px 0px 1px;
 }
 
-.sidenav ul:hover {
+.sidenav li:hover {
     text-shadow: 0px 0px 1px;
 }*/
 
